upgrade gradle for openlmis v2, fix issue with where files were being constructed